--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,5 @@
 <html>
-  <body onload="renderHello()">
-    <div id="target">Loading...</div>
-    <script id="template" type="x-tmpl-mustache">
-      Hello {{ name }}!
-    </script>
-
-    <script src="https://unpkg.com/mustache@latest"></script>
-    <script src="render.js"></script>
+  <body>
+    <div>Hello {{ name }} !!!</div>
   </body>
 </html>
